feat(sensor, device): create crud
